CORAL-0 Select: fix temporary Spectrum CSS regression
* long label are overflowing

--- a/coral-component-select/src/styles/index.styl
+++ b/coral-component-select/src/styles/index.styl
@@ -70,3 +70,8 @@ coral-select-item {
     opacity: 0.01;
   }
 }
+
+// @spectrum regression
+._coral-Dropdown-label {
+  flex: 1 1 auto;
+}
